--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
-/* @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"); */
-/* @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"); */
+
 @import "tailwindcss";
+
+@import "swiper/css";
+@import "swiper/css/free-mode";
+@import "swiper/css/scrollbar";
+
 
 @theme {
   /* Custom font families (migrated from tailwind.config.ts) */
